rework build